<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.uwaterloo.cs.hj8park.a4.SelectActivity">

    <fragment android:name="ca.uwaterloo.cs.hj8park.a4.fragment.LogoutFragment"
        android:id="@+id/selectLogoutFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </fragment>

    <TextView
        android:id="@+id/selectTopicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/select_topic"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectLogoutFragment" />

    <TextView
        android:id="@+id/selectNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:text="@string/select_number"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/selectTopicText"
        app:layout_constraintTop_toBottomOf="@+id/selectLogoutFragment" />

    <TextView
        android:id="@+id/selectTopic1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/select_topic1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectTopicText" />

    <Spinner
        android:id="@+id/selectNumberSpinner1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/selectTopic1"
        app:layout_constraintTop_toBottomOf="@+id/selectNumberText" />

    <Button
        android:id="@+id/selectLoadButton"
        style="@style/AppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/load_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectLogoutFragment" />
</android.support.constraint.ConstraintLayout>
